[package]
name           = "json-rpc"
version        = "0.1.2"
edition        = "2021"
authors        = ["hinto-janai <hinto.janai@protonmail.com>"]
keywords       = ["json", "rpc"]
categories     = ["encoding"]
readme         = "README.md"
license        = "MIT"
description    = "JSON-RPC 2.0 types"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
